hphp/test/zend/bad/ext/session/tests/rfc1867_sid_invalid.php
<?php
$_COOKIE = http_parse_cookie("PHPSESSID=_");

error_reporting(0);
session_start();
var_dump(session_id());
var_dump(basename(__FILE__) == $_POST[ini_get("session.upload_progress.name")]);
var_dump($_FILES);
var_dump($_SESSION["upload_progress_" . basename(__FILE__)]);
session_destroy();
?>